--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
@@ -27,7 +27,7 @@
                         <h2>Producto</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
-                            <li class="breadcrumb-item active">Catalogo</li>
+                            <li class="breadcrumb-item active">Catálogo</li>
                             <li class="breadcrumb-item active">Producto</li>
                         </ul>
                     </div>
