CJAL-Avance desarrollo reporte del dia - 12/11/2018

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
@@ -26,11 +26,11 @@
                 <div class="block-header">
                     <div class="row clearfix">
                         <div class="col-lg-5 col-md-5 col-sm-12">
-                            <h2>Usuarios</h2>
+                            <h2>Caja General</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
-                                <li class="breadcrumb-item">Catálogos</li>
-                                <li class="breadcrumb-item">Usuarios</li>
+                                <li class="breadcrumb-item">Ventas</li>
+                                <li class="breadcrumb-item">Cortes y Anticipos</li>
                             </ul>
                         </div>
                     </div>
