--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
@@ -64,7 +64,7 @@
                                     </div>
                                     @if (ViewBag.CajaGeneralCamioneta != null)
                                     {
-                                        if (ViewBag.CajaGeneralCamioneta[0].PuntoVenta == "Pipa No. 1")
+                                        if (ViewBag.CajaGeneralCamioneta[0].IdPipa != null)
                                         {
                                             <div class="col-sm-05" id="hiddendiv">
                                                 <b>Pipa:</b>
@@ -124,7 +124,7 @@
                                 <div class="row clearfix">
                                     @if (ViewBag.CajaGeneralCamioneta != null)
                                     {
-                                        if (ViewBag.CajaGeneralCamioneta[0].PuntoVenta == "Pipa No. 1")
+                                        if (ViewBag.CajaGeneralCamioneta[0].IdPipa != null)
                                         {
                                             <div class="col-lg-6 col-md-6 col-sm-6">
                                                 <div class="table-responsive">
