JSA - 13/11/2018 Avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -1,6 +1,42 @@
 ﻿
 @{
-    ViewBag.Title = "Inicio";
+    ViewBag.Title = "Inicio -";
 }
 
+<section class="content home">
+    <div class="container-fluid">
+        <div class="block-header">
+            <div class="row clearfix">
+                <div class="col-lg-5 col-md-5 col-sm-12">
+                    <h2>Dashboard</h2>
+                    <ul class="breadcrumb padding-0">
+                        <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
+                        <li class="breadcrumb-item active">Dashboard</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row clearfix">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="card text-center">
+                    <div class="body">
+                        <h1>Bienvenido al Nuevo Sistema SAGAS</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row clearfix">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Cubo de <strong>información</strong></h2>
+                    </div>
+                    <div class="body">
+                        Lo sentimos, de momento no tenemos información para mostrar.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
