--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
@@ -1,9 +1,41 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
-
 @{
     ViewBag.Title = "Error";
 }
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
+<section class="content home">
+    <div class="container-fluid">
+        <div class="block-header">
+            <div class="row clearfix">
+                <div class="col-lg-5 col-md-5 col-sm-12">
+                    <h2>Dashboard</h2>
+                    <ul class="breadcrumb padding-0">
+                        <li class="breadcrumb-item"><i class="zmdi zmdi-home"></i></a></li>
+                        <li class="breadcrumb-item active">Dashboard</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row clearfix">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="card text-center">
+                    <div class="body">
+                        <h1>Ups.. Algo a salido mal!!</h1>
+                        <h5>La pagina que estas buscando no se encuentra</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row clearfix">
+            <div id="DivAlerta" class="container">
+                <div class="alert alert-danger">
+                    <div class="alert-icon">
+                        <i class="zmdi zmdi-block"></i>
+                    </div>
+                    <strong>
+                        Acción inesperada o dirección no encontrada. Si este mensaje persiste, favor de comunicarlo al administrador del sistema
+                    </strong>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
