--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - SAGAS</p>
         </footer>
     </div>
 
