--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using MVC.Presentacion.Models.Catalogos
 
-@model  UsuariosModel
+@model  UsuarioDTO
 
 @{
     ViewBag.Title = "Index";
@@ -54,7 +54,7 @@
                         <div class="row clearfix">
                             <div class="col-sm-3">
                                 <div>
-                                    <strong>Gasera</strong>
+                                    <strong>Gasera:</strong>
                                 </div>
                                 <div>
                                     @if (ViewBag.EsAdmin)
@@ -74,19 +74,14 @@
                             </div>
 
                         </div>
-                        <div class="row clearfix">
-                            <div class="col-md-12">
-                                <input id="BtnNuevo" type="submit" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
-                            </div>
-                        </div>
-
+                        <br />
                         <div class="row clearfix">
                             <div class="col-sm-12">
                                 <div class="row clearfix">
                                     <div class="col-sm-3">
-                                        <strong>Nombre</strong>
+                                        <strong>Nombre:</strong>
                                         <select id="ddlUser" name="IdUsuario" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
-                                            @foreach (var lst in ViewBag.Usuarios)
+                                            @foreach (var lst in ViewBag.ListaUsuarios)
                                             {
                                                 <option value="@lst.IdUsuario">@lst.Nombre</option>
                                             }
@@ -94,19 +89,27 @@
                                     </div>
 
                                     <div class="col-sm-3">
-                                        <strong>Correo Elect. (Acceso)</strong>
+                                        <strong>Correo Elect. (Acceso):</strong>
                                         <select id="ddlUser" name="Email1" class="form-control show-tick" data-live-search="true">
-                                            @foreach (var lst in ViewBag.Usuarios)
+                                            @foreach (var lst in ViewBag.ListaUsuarios)
                                             {
                                                 <option value="@lst.Email1">@lst.Email1</option>
                                             }
                                         </select>
                                     </div>
                                     <div class="col-sm-3">
-                                        <input type="submit" id="btnBuscar" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
+                                        <div class="form-group">
+                                            <div> &nbsp; </div>
+                                            <input type="submit" id="btnBuscar" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <div class="form-group">
+                                            <div> &nbsp; </div>
+                                            <input id="BtnNuevo" type="submit" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
+                                        </div>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                         <br />
