--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/CreateForm.css
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/CreateForm.css
@@ -14,7 +14,7 @@
     text-align: center;
 }
 
-a.tip {
+/*a.tip {
     text-decoration: none;
 }
 
@@ -41,6 +41,6 @@ a.tip {
         text-decoration: none;
         border-radius: 6px;
         color: white;
-    }
+    }*/
 
 
