--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/ActualizaParametros.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/ActualizaParametros.cshtml
@@ -18,7 +18,7 @@
                             <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item">Catálogo</li>
                             <li class="breadcrumb-item">Gasera</li>
-                            <li class="breadcrumb-item">Edición de Parametros</li>
+                            <li class="breadcrumb-item">Edición de Parámetros</li>
                         </ul>
                     </div>
                 </div>
