--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                                     <img src="assets/images/LogoCorpKonsilio183x183.png" alt="" />
                                     Corporativo Konsilio
                                 </h4>
-                                <h3>SAGAS. Sistema de Administracion de Gas <strong>Ver. 1.0</strong></h3>
+                                <h3>SAGAS. Sistema de Administración de Gas <strong style="text-transform: lowercase;">Ver. 1.0</strong></h3>
                                 <p>
                                 </p>
                                 <div class="footer">
@@ -58,7 +58,7 @@
                                         </select>
                                     </div>
                                     <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="usuario" name="Usuario" />
+                                        <input type="text" class="form-control" placeholder="Usuario" name="Usuario" />
                                         <span class="input-group-addon"><i class="zmdi zmdi-account-circle"></i></span>
                                     </div>
                                     <div class="input-group">
