--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolDto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolDto.cshtml
@@ -193,13 +193,13 @@
         <td>@Html.CheckBoxFor(m => m.AppTraspasoPipa)</td>
 
         <td>
-            <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })">
+            <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="material-icons">edit</i>
-                <span class="icon-name"></span>
+                <span>Editar nombre rol</span>
             </a>
-            <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Roles", new { id = Model.IdRol })">
+            <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="material-icons">delete</i>
-                <span class="icon-name"></span>
+                <span>Eliminar rol</span>
             </a>
         </td>
     </tr>
@@ -289,13 +289,13 @@
         <td>@Html.CheckBoxFor(m => m.CatConsultarPrecioVenta) </td>
 
         <td>
-            <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })">
+            <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="material-icons">edit</i>
-                <span class="icon-name"></span>
+                <span>Editar nombre rol</span>
             </a>
-            <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Roles", new { id = Model.IdRol })">
+            <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="material-icons">delete</i>
-                <span class="icon-name"></span>
+                <span>Eliminar rol</span>
             </a>
         </td>
     </tr>
@@ -388,13 +388,13 @@
         <td>@Html.CheckBoxFor(m => m.RequisicionAutorizar)</td>
 
         <td>
-            <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })">
+            <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="material-icons">edit</i>
-                <span class="icon-name"></span>
+                <span>Editar nombre rol</span>
             </a>
-            <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Roles", new { id = Model.IdRol })">
+            <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="material-icons">delete</i>
-                <span class="icon-name"></span>
+                <span>Eliminar rol</span>
             </a>
         </td>
     </tr>
